# disciplefy

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  LICENSE  OAUTH_REDIRECT_FIX.md  README.md  claude-docs-analysis-report.md  frontend_api_updates.md  gemini-docs-analysis-report.md  package-lock.json
.githooks/: pre-commit  pre-push  setup.sh
.github/: GITHUB_SECRETS_SETUP.md  WORKFLOW_SETUP.md
admin-web/: CLAUDE.md  README.md  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
backend/: CLAUDE.md  README.md  deno.json  test-price-update.sh  test_cached_architecture.sql  test_daily_verse.js
docs/: API Contract Documentation.md  Admin Panel Specification.md  Anonymous User Data Lifecycle.md  Data Model.md  Dev QA Test Specs.md  DevOps & Deployment Plan.md  Developer Documentation Guide.md  Documentation Readers Guide.md  Error Handling Strategy.md  IMPLEMENTATION_CHECKLIST.md  Investor Documentation Guide.md  LLM Input Validation Specification.md  Migration Strategy.md  Offline Strategy.md  Product Requirements Document.md  README.md  (+12 more)
rs-backend/: .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  docker-compose.override.yml  docker-compose.yml  vector.toml
rs-backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs
rs-backend/src/cron/: blog_generator.rs  mod.rs  push_notifications.rs  schedules.rs
rs-backend/src/models/: cron_config.rs  mod.rs  post.rs
rs-backend/src/routes/: admin.rs  health.rs  mod.rs  posts.rs
rs-backend/src/services/: content_formatter.rs  mod.rs  study_api.rs
(+2019 files in other folders)
